--- a/src/app/components/sidebar/Sidebar.module.scss
+++ b/src/app/components/sidebar/Sidebar.module.scss
@@ -32,4 +32,20 @@
             margin: 10px 0px;
         }
     }
+    .logout{
+        width: 100%;
+        padding: 20px;
+        margin: 5px 0px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        cursor: pointer;
+        border-radius: 10px;
+        background-color: none;
+        border: none;
+        &:hover{
+            background-color: #2e374a;
+            
+        }
+    }
 }
