--- a/src/app/components/sidebar/Sidebar.module.scss
+++ b/src/app/components/sidebar/Sidebar.module.scss
@@ -1,51 +1,51 @@
-.container{
-    position: sticky;
-    top: 40px;
+.container {
+  position: sticky;
+  top: 40px;
 
-    .user{
-        display: flex;
-        align-items: center;
-        gap: 20px;
-        margin-bottom: 20px;
-        .userImage{
-            border-radius: 50%;
-            object-fit: cover;
-        }
-        .userDetail{
-            display: flex;
-            flex-direction: column;
-            .userName{
-                font-weight: 500;
-            }
-            .userTitle{
-                font-size: 12px;
-                color: var(--textSoft)
-            }
-        }
+  .user {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+    .userImage {
+      border-radius: 50%;
+      object-fit: cover;
     }
-    .list{
-        list-style: none;
-        .cat{
-            color: var(--textSoft);
-            font-weight: bold;
-            font-size: 13;
-            margin: 10px 0px;
-        }
+    .userDetail {
+      display: flex;
+      flex-direction: column;
+      .userName {
+        font-weight: 500;
+      }
+      .userTitle {
+        font-size: 12px;
+        color: var(--textSoft);
+      }
     }
-    .logout{
-        width: 100%;
-        padding: 20px;
-        margin: 5px 0px;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        cursor: pointer;
-        border-radius: 10px;
-        background-color: none;
-        border: none;
-        &:hover{
-            background-color: #2e374a;
-            
-        }
+  }
+  .list {
+    list-style: none;
+    .cat {
+      color: var(--textSoft);
+      font-weight: bold;
+      font-size: 13;
+      margin: 10px 0px;
     }
+  }
+  .logout {
+    padding: 20px;
+    margin: 5px 0px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    border-radius: 10px;
+    background: none;
+    border: none;
+    color: white;
+    width: 100%;
+    &:hover {
+      background-color: #2e374a;
+    }
+  }
 }
