--- a/src/assets/styles/Layout.module.scss
+++ b/src/assets/styles/Layout.module.scss
@@ -1,12 +1,32 @@
-.container{
+.container {
+  display: flex;
+  .menu {
+    flex: 1;
+    background-color: var(--bgSoft);
+    padding: 20px;
+  }
+  .content {
+    flex: 4;
+    padding: 20px;
+  }
+}
+.wrapper {
+  width: 100%;
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+  .main {
+    flex: 3;
     display: flex;
-    .menu{
-        flex: 1;
-        background-color: var(--bgSoft);
-        padding: 20px;
+    flex-direction: column;
+    gap: 20px;
+    .cards {
+      display: flex;
+      gap: 20px;
+      justify-content: space-between;
     }
-    .content{
-        flex: 4;
-        padding: 20px;
-    }
+  }
+  .side {
+    flex: 1;
+  }
 }
