--- a/src/app/dashboard/users/[id]/SingleUser.module.scss
+++ b/src/app/dashboard/users/[id]/SingleUser.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   gap: 50px;
   margin-top: 20px;
-  .infoContainer {
+  .inforContainer {
     flex: 1;
     background-color: var(--bgSoft);
     padding: 20px;
@@ -10,15 +10,14 @@
     font-weight: bold;
     color: var(--textSoft);
     height: max-content;
-  }
-
-  .imgContainer {
-    width: 100%;
-    height: 300px;
-    position: relative;
-    border-radius: 10px;
-    overflow: hidden;
-    margin-bottom: 20px;
+    .imgContainer {
+      width: 100%;
+      height: 300px;
+      position: relative;
+      border-radius: 10px;
+      overflow: hidden;
+      margin-bottom: 20px;
+    }
   }
 
   .formContainer {
